<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#111"
    tools:context=".LandingPage">

    <Button
        android:id="@+id/landing_admin_button"
        android:layout_width="155dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/eater"
        android:text="@string/admin"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landing_cancelOrder_button"
        tools:visibility="visible" />

    <Button
        android:id="@+id/landing_search_button"
        android:layout_width="155dp"
        android:layout_height="56dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/eater"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landing_textView2" />

    <Button
        android:id="@+id/landing_orderHist_button"
        android:layout_width="155dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/eater"
        android:text="@string/order_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landing_search_button" />

    <TextView
        android:id="@+id/landing_textView1"
        android:layout_width="255dp"
        android:layout_height="52dp"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/eater"
        android:text="@string/main_menu"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/landing_textView2"
        android:layout_width="224dp"
        android:layout_height="32dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/eater"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landing_textView1" />

    <Button
        android:id="@+id/landing_cancelOrder_button"
        android:layout_width="155dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/eater"
        android:text="@string/cancel_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landing_orderHist_button" />

    <Button
        android:id="@+id/landing_logout_button"
        android:layout_width="99dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/eater"
        android:text="@string/sign_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>