<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#111"
    tools:context=".SearchActivity">


    <AutoCompleteTextView
        android:id="@+id/search_auto_complete_textview"
        android:layout_width="189dp"
        android:layout_height="41dp"
        android:layout_marginTop="112dp"
        android:backgroundTint="#F0F8FF"
        android:fontFamily="@font/eater"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/search_search_button"
        android:layout_width="155dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/eater"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_auto_complete_textview" />


    <TextView
        android:id="@+id/search_textView2"
        android:layout_width="391dp"
        android:layout_height="276dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/eater"
        android:hint="@string/no_search_items"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_search_button" />

    <Button
        android:id="@+id/search_back_button"
        android:layout_width="80dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/eater"
        android:text="@string/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/search_textView1"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:fontFamily="@font/eater"
        android:text="@string/search_for_desired_items"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/search_auto_complete_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.805" />

    <Button
        android:id="@+id/search_buy_button"
        android:layout_width="205dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/eater"
        android:text="@string/buy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_textView2" />
</androidx.constraintlayout.widget.ConstraintLayout>