<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#111"
    tools:context=".OrderHistory">

    <TextView
        android:id="@+id/Ohistory_textView1"
        android:layout_width="189dp"
        android:layout_height="41dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/eater"
        android:hint="@string/order_history"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Ohistory_back_button"
        android:layout_width="85dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/eater"
        android:text="@string/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Ohistory_textView2"
        android:layout_width="372dp"
        android:layout_height="539dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/eater"
        android:hint="@string/your_order_history_is_empty"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Ohistory_textView1"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>