<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#111">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="276dp"
        android:layout_height="36dp"
        android:layout_marginTop="348dp"
        android:fontFamily="@font/eater"
        android:text="Already a user?"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_TextView1" />

    <TextView
        android:id="@+id/main_TextView1"
        android:layout_width="148dp"
        android:layout_height="126dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/eater"
        android:text="@string/dark_amazon"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_login_button"
        android:layout_width="216dp"
        android:layout_height="63dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/eater"
        android:text="@string/login"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/main_create_account_button"
        android:layout_width="216dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/eater"
        android:text="@string/create_account"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_password_editText" />

    <EditText
        android:id="@+id/main_username_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:backgroundTint="#F0F8FF"
        android:ems="10"
        android:fontFamily="@font/eater"
        android:hint="@string/enter_username"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/main_password_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#F0F8FF"
        android:ems="10"
        android:fontFamily="@font/eater"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_username_editText" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="276dp"
        android:layout_height="36dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/eater"
        android:text="Not a User? Create Account"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_TextView1" />

</androidx.constraintlayout.widget.ConstraintLayout>
