<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#111"
    tools:context=".CancelOrderActivity">

    <Spinner
        android:id="@+id/COrder_spinner"
        android:layout_width="340dp"
        android:layout_height="37dp"
        android:layout_marginTop="272dp"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/COrder_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:fontFamily="@font/eater"
        android:text="@string/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/COrder_textView1"
        android:layout_width="229dp"
        android:layout_height="51dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/eater"
        android:text="@string/cancel_order"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/COrder_textView2"
        android:layout_width="336dp"
        android:layout_height="34dp"
        android:fontFamily="@font/eater"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:text="@string/please_select_an_order_to_cancel"
        app:layout_constraintBottom_toTopOf="@+id/COrder_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/COrder_textView1"
        app:layout_constraintVertical_bias="0.275" />

    <Button
        android:id="@+id/COrder_cancel_order_button"
        android:layout_width="193dp"
        android:layout_height="53dp"
        android:layout_marginTop="124dp"
        android:fontFamily="@font/eater"
        android:text="@string/cancel_order"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/COrder_spinner" />
</androidx.constraintlayout.widget.ConstraintLayout>